# CCS_fyp_workspace

./: .gitignore  CMakeLists.txt  README.md
Asm_ALU_Add/: .ccsproject  .cproject  main.asm
Asm_ALU_Add/.launches/: Asm_ALU_Add.launch
Asm_ALU_Add/Debug/: Asm_ALU_Add_linkInfo.xml  makefile  subdir_rules.mk
Asm_Blinky/: .cproject  main.asm
Asm_Blinky/.launches/: Asm_Blinky.launch
Asm_Blinky/Debug/: Asm_Blinky_linkInfo.xml  makefile  subdir_rules.mk
Asm_Digital_IO/: .cproject  .project  main.asm
Asm_Digital_IO/.launches/: Asm_Digital_IO.launch
Asm_Digital_IO/Debug/: Asm_Digital_IO_linkInfo.xml  makefile  subdir_rules.mk
C_ADC_12/: .cproject  .project  main.c  main.h
C_Low_Power_Modes/: .cproject  .project  CMakeLists.txt  main.c  main.h
C_Low_Power_Modes/.launches/: C_Low_Power_Modes.launch
C_UART_Serial_Communication/: .project  main.c  main.h
DCO_MCLK_16MHz/: .ccsproject  .cproject  .project  cs_ex2_DCO16MHz.c
DCO_MCLK_8MHz/: .ccsproject  .cproject  .project  cs_ex1_DCOSetup_8MHz.c
DCO_MCLK_8MHz/.launches/: DCO_MCLK_8MHz.launch
IRQ_P4_Sw1_c/: .cproject  .project  CMakeLists.txt  main.c  main.h
IRQ_P4_Sw1_c/.launches/: IRQ_P4_Sw1_c.launch
IRQ_P4_Sw1_c/Debug/: IRQ_P4_Sw1_c_linkInfo.xml  makefile  subdir_rules.mk
OutOfBox_MSP430FR5969/: .ccsproject  .cproject
OutOfBox_MSP430FR5969/.launches/: OutOfBox_MSP430FR5969.launch
OutOfBox_MSP430FR5969/Debug/: OutOfBox_MSP430FR5969.txt  OutOfBox_MSP430FR5969_linkInfo.xml  ccsObjs.opt  makefile  subdir_rules.mk
OutOfBox_MSP430FR5969/Debug/driverlib/MSP430FR5xx_6xx/: subdir_rules.mk
baudRate_uart_01.c/: .cproject  .project
baudRate_uart_01.c/.launches/: msp430fr59xx_euscia0_uart_01.c.launch
msp430fr59xx_adc12_10.c/: .cproject  .project  msp430fr59xx_adc12_10.c
msp430fr59xx_adc12_10.c/.launches/: msp430fr59xx_adc12_10.c.launch
msp430fr59xx_adc12_10.c/Debug/: ccsObjs.opt  makefile  msp430fr59xx_adc12_10.c_linkInfo.xml  subdir_rules.mk  subdir_vars.mk
msp430fr59xx_euscia0_uart_01.c/: .cproject  .project  msp430fr59xx_euscia0_uart_01.c
msp430fr59xx_euscia0_uart_01.c/Debug/: ccsObjs.opt  makefile  msp430fr59xx_euscia0_uart_01.c_linkInfo.xml  subdir_rules.mk  subdir_vars.mk
temperatureSensor_LED_blinking_adc12.c/: .cproject  .project  msp430fr59xx_adc12_10.c
temperature_sensor_adc12_led/: .ccsproject  .cproject  .project  temp_sensor_led_adc12.c  temp_sensor_led_adc12.h
temperature_sensor_adc12_led/.launches/: temperature_sensor_adc12_led.launch
timer_a_ex2_continousModeOperationWithCCR0Interrupt/: .ccsproject  .cproject  timer_a_ex2_continousModeOperationWithCCR0Interrupt.c
