cmake_minimum_required(VERSION 3.26)
project(CCS_fyp_workspace)

set(CMAKE_CXX_STANDARD 14)

include_directories(C_Low_Power_Modes)
include_directories(DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx)
include_directories(DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/inc)
include_directories(DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx)
include_directories(DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/inc)
include_directories(IRQ_P4_Sw1_c)
include_directories(OutOfBox_MSP430FR5969)
include_directories(OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx)
include_directories(OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/deprecated)
include_directories(OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/deprecated/CCS)
include_directories(OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/deprecated/IAR)
include_directories(OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/inc)
include_directories(timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx)
include_directories(timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/inc)

add_executable(CCS_fyp_workspace
        .metadata/.plugins/org.eclipse.cdt.make.core/specs.c
        .metadata/.plugins/org.eclipse.cdt.make.core/specs.cpp
        baudRate_uart_01.c/msp430fr59xx_euscia0_uart_01.c
        C_Low_Power_Modes/main.c
        C_Low_Power_Modes/main.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/inc/hw_memmap.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/inc/version.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/adc12_b.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/adc12_b.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/aes256.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/aes256.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/comp_e.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/comp_e.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/crc.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/crc.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/crc32.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/crc32.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/cs.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/cs.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/dma.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/dma.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/driverlib.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/esi.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/esi.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/eusci_a_spi.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/eusci_a_spi.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/eusci_a_uart.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/eusci_a_uart.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/eusci_b_i2c.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/eusci_b_i2c.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/eusci_b_spi.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/eusci_b_spi.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/framctl.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/framctl.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/framctl_a.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/framctl_a.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/gpio.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/gpio.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/hspll.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/hspll.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/lcd_c.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/lcd_c.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/mpu.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/mpu.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/mpy32.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/mpy32.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/mtif.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/mtif.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/pmm.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/pmm.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/ram.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/ram.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/ref_a.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/ref_a.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/rtc_b.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/rtc_b.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/rtc_c.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/rtc_c.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/saph.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/saph.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/saph_a.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/saph_a.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/sdhs.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/sdhs.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/sfr.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/sfr.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/sysctl.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/sysctl.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/timer_a.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/timer_a.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/timer_b.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/timer_b.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/tlv.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/tlv.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/uups.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/uups.h
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/wdt_a.c
        DCO_MCLK_16MHz/driverlib/MSP430FR5xx_6xx/wdt_a.h
        DCO_MCLK_16MHz/cs_ex2_DCO16MHz.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/inc/hw_memmap.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/inc/version.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/adc12_b.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/adc12_b.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/aes256.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/aes256.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/comp_e.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/comp_e.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/crc.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/crc.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/crc32.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/crc32.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/cs.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/cs.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/dma.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/dma.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/driverlib.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/esi.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/esi.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/eusci_a_spi.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/eusci_a_spi.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/eusci_a_uart.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/eusci_a_uart.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/eusci_b_i2c.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/eusci_b_i2c.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/eusci_b_spi.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/eusci_b_spi.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/framctl.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/framctl.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/framctl_a.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/framctl_a.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/gpio.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/gpio.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/hspll.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/hspll.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/lcd_c.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/lcd_c.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/mpu.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/mpu.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/mpy32.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/mpy32.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/mtif.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/mtif.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/pmm.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/pmm.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/ram.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/ram.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/ref_a.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/ref_a.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/rtc_b.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/rtc_b.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/rtc_c.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/rtc_c.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/saph.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/saph.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/saph_a.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/saph_a.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/sdhs.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/sdhs.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/sfr.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/sfr.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/sysctl.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/sysctl.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/timer_a.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/timer_a.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/timer_b.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/timer_b.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/tlv.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/tlv.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/uups.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/uups.h
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/wdt_a.c
        DCO_MCLK_8MHz/driverlib/MSP430FR5xx_6xx/wdt_a.h
        DCO_MCLK_8MHz/cs_ex1_DCOSetup_8MHz.c
        IRQ_P4_Sw1_c/main.c
        IRQ_P4_Sw1_c/main.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/deprecated/CCS/msp430fr5xx_6xxgeneric.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/deprecated/IAR/msp430fr5xx_6xxgeneric.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/inc/hw_memmap.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/inc/hw_regaccess.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/inc/hw_types.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/inc/version.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/adc12_b.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/adc12_b.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/aes256.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/aes256.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/comp_e.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/comp_e.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/crc.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/crc.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/crc32.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/crc32.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/cs.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/cs.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/dma.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/dma.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/driverlib.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/esi.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/esi.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/eusci_a_spi.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/eusci_a_spi.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/eusci_a_uart.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/eusci_a_uart.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/eusci_b_i2c.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/eusci_b_i2c.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/eusci_b_spi.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/eusci_b_spi.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/framctl.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/framctl.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/gpio.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/gpio.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/lcd_c.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/lcd_c.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/mpu.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/mpu.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/mpy32.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/mpy32.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/pmm.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/pmm.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/ram.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/ram.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/ref_a.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/ref_a.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/rtc_b.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/rtc_b.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/rtc_c.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/rtc_c.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/sfr.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/sfr.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/sysctl.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/sysctl.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/timer_a.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/timer_a.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/timer_b.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/timer_b.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/tlv.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/tlv.h
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/wdt_a.c
        OutOfBox_MSP430FR5969/driverlib/MSP430FR5xx_6xx/wdt_a.h
        OutOfBox_MSP430FR5969/FRAMLogMode.c
        OutOfBox_MSP430FR5969/FRAMLogMode.h
        OutOfBox_MSP430FR5969/LiveTempMode.c
        OutOfBox_MSP430FR5969/LiveTempMode.h
        OutOfBox_MSP430FR5969/main.c
        OutOfBox_MSP430FR5969/main.h
        temperatureSensor_LED_blinking_adc12.c/msp430fr59xx_adc12_10.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/inc/hw_memmap.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/inc/version.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/adc12_b.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/adc12_b.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/aes256.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/aes256.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/comp_e.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/comp_e.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/crc.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/crc.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/crc32.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/crc32.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/cs.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/cs.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/dma.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/dma.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/driverlib.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/esi.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/esi.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/eusci_a_spi.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/eusci_a_spi.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/eusci_a_uart.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/eusci_a_uart.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/eusci_b_i2c.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/eusci_b_i2c.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/eusci_b_spi.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/eusci_b_spi.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/framctl.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/framctl.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/framctl_a.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/framctl_a.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/gpio.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/gpio.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/hspll.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/hspll.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/lcd_c.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/lcd_c.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/mpu.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/mpu.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/mpy32.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/mpy32.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/mtif.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/mtif.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/pmm.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/pmm.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/ram.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/ram.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/ref_a.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/ref_a.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/rtc_b.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/rtc_b.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/rtc_c.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/rtc_c.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/saph.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/saph.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/saph_a.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/saph_a.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/sdhs.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/sdhs.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/sfr.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/sfr.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/sysctl.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/sysctl.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/timer_a.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/timer_a.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/timer_b.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/timer_b.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/tlv.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/tlv.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/uups.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/uups.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/wdt_a.c
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/driverlib/MSP430FR5xx_6xx/wdt_a.h
        timer_a_ex2_continousModeOperationWithCCR0Interrupt/timer_a_ex2_continousModeOperationWithCCR0Interrupt.c
        DCO_MCLK_8MHz/cs_ex1_DCOSetup_8MHz.c)
